# swagger-output.json
@@ -1,27 +1,17 @@
 {
-  "openapi": "3.0.0",
+  "swagger": "2.0",
   "info": {
-    "title": "Library API",
-    "description": "API documentation for library service",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "title": "REST API",
+    "description": ""
   },
-  "servers": [
-    {
-      "url": "https://cse-341-library-api-fpy9.onrender.com/"
-    }
+  "host": "localhost:8080",
+  "basePath": "/",
+  "schemes": [
+    "http"
   ],
   "paths": {
     "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/profile": {
       "get": {
         "description": "",
         "responses": {
@@ -45,38 +35,41 @@
       },
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "author": {
+                  "example": "any"
+                },
+                "genre": {
+                  "example": "any"
+                },
+                "publishedYear": {
+                  "example": "any"
+                },
+                "available": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
           },
           "400": {
             "description": "Bad Request"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "title": {
-                    "example": "any"
-                  },
-                  "author": {
-                    "example": "any"
-                  },
-                  "genre": {
-                    "example": "any"
-                  },
-                  "publishedYear": {
-                    "example": "any"
-                  },
-                  "available": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -89,9 +82,7 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -110,8 +101,30 @@
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
             "schema": {
-              "type": "string"
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "author": {
+                  "example": "any"
+                },
+                "genre": {
+                  "example": "any"
+                },
+                "publishedYear": {
+                  "example": "any"
+                },
+                "available": {
+                  "example": "any"
+                }
+              }
             }
           }
         ],
@@ -122,34 +135,11 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "title": {
-                    "example": "any"
-                  },
-                  "author": {
-                    "example": "any"
-                  },
-                  "genre": {
-                    "example": "any"
-                  },
-                  "publishedYear": {
-                    "example": "any"
-                  },
-                  "available": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
           }
         }
       },
@@ -160,14 +150,15 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "type": "string"
           }
         ],
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -178,57 +169,56 @@
     "/user/": {
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "userName": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
           },
           "400": {
             "description": "Bad Request"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "userName": {
-                    "example": "any"
-                  },
-                  "email": {
-                    "example": "any"
-                  },
-                  "password": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
           },
-          "404": {
-            "description": "Not Found"
+          "409": {
+            "description": "Conflict"
           }
         }
       }
     },
-    "/user/{id}": {
-      "put": {
+    "/user/login": {
+      "post": {
         "description": "",
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
-            "required": true,
+            "name": "body",
+            "in": "body",
             "schema": {
-              "type": "string"
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
             }
           }
         ],
@@ -239,71 +229,157 @@
           "400": {
             "description": "Bad Request"
           },
-          "404": {
-            "description": "Not Found"
+          "401": {
+            "description": "Unauthorized"
           }
+        }
+      }
+    },
+    "/user/logout": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/auth/google": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/google/callback": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/status": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "openapi": {
+      "type": "string",
+      "example": "3.0.0"
+    },
+    "info": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string",
+          "example": "Library API"
         },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "userName": {
-                    "example": "any"
-                  },
-                  "email": {
-                    "example": "any"
-                  },
-                  "password": {
-                    "example": "any"
+        "version": {
+          "type": "string",
+          "example": "1.0.0"
+        }
+      }
+    },
+    "servers": {
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "url": {
+            "type": "string",
+            "example": "http://localhost:8080"
+          }
+        }
+      }
+    },
+    "components": {
+      "type": "object",
+      "properties": {
+        "securitySchemes": {
+          "type": "object",
+          "properties": {
+            "cookieAuth": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "apiKey"
+                },
+                "in": {
+                  "type": "string",
+                  "example": "cookie"
+                },
+                "name": {
+                  "type": "string",
+                  "example": "connect.sid"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "Session cookie for authentication (Passport sessions)"
+                }
+              }
+            },
+            "oauth2": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "oauth2"
+                },
+                "flows": {
+                  "type": "object",
+                  "properties": {
+                    "authorizationCode": {
+                      "type": "object",
+                      "properties": {
+                        "authorizationUrl": {
+                          "type": "string",
+                          "example": "undefined/auth/google"
+                        },
+                        "tokenUrl": {
+                          "type": "string",
+                          "example": "undefined/auth/google/callback"
+                        },
+                        "scopes": {
+                          "type": "object",
+                          "properties": {}
+                        }
+                      }
+                    }
                   }
                 }
               }
             }
           }
         }
-      },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
       }
     }
   },
-  "components": {
-    "securitySchemes": {
-      "oauth2": {
-        "type": "oauth2",
-        "flows": {
-          "authorizationCode": {
-            "authorizationUrl": "https://dev-gbwrsi3upfsfczwp.us.auth0.com/authorize",
-            "tokenUrl": "https://dev-gbwrsi3upfsfczwp.us.auth0.com/oauth/token",
-            "scopes": {
-              "openid": "OpenID Connect scope",
-              "profile": "User profile info",
-              "email": "User email",
-              "read:books": "Read access to books"
-            }
-          }
-        }
-      }
-    }
-  }
+  "apis": [
+    "./routes/*.js"
+  ]
 }
